[gd_scene load_steps=6 format=3 uid="uid://gx23qrbt3o6y"]

[ext_resource type="Script" uid="uid://xgxhamobylh8" path="res://scripts/car_customization.gd" id="1_fwqsq"]
[ext_resource type="AudioStream" uid="uid://cp8wob2vuktxp" path="res://sound/ui/ui_main_button_select.wav" id="2_5id6k"]
[ext_resource type="AudioStream" uid="uid://bhy4ndjfwwhaa" path="res://sound/ui/ui_main_button_climb.wav" id="3_ygs3q"]

[sub_resource type="PlaneMesh" id="PlaneMesh_fwqsq"]

[sub_resource type="BoxShape3D" id="BoxShape3D_5id6k"]

[node name="CarCustomization" type="CanvasLayer"]
script = ExtResource("1_fwqsq")

[node name="CarPreview" type="SubViewportContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="CarPreview"]
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="CarPreview/SubViewport"]
transform = Transform3D(-0.707107, -0.183013, 0.683013, 1.49012e-08, 0.965926, 0.258819, -0.707107, 0.183013, -0.683012, 2.80447, 2.34255, -3.37049)

[node name="TitleLabel" type="Label" parent="."]
offset_left = 375.5
offset_top = 25.0
offset_right = 776.5
offset_bottom = 75.0
theme_override_font_sizes/font_size = 36
text = "CUSTOMIZE YOUR CAR!"

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="CustomizationPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CustomizationPanel"]
layout_mode = 2

[node name="ColorGrid" type="GridContainer" parent="MarginContainer/VBoxContainer/CustomizationPanel/VBoxContainer"]
layout_mode = 2

[node name="PrimaryColorLabel" type="Label" parent="MarginContainer/VBoxContainer/CustomizationPanel/VBoxContainer/ColorGrid"]
layout_mode = 2
text = "Primary:"

[node name="PrimaryColorPicker" type="ColorPickerButton" parent="MarginContainer/VBoxContainer/CustomizationPanel/VBoxContainer/ColorGrid"]
layout_mode = 2

[node name="SecondaryColorLabel" type="Label" parent="MarginContainer/VBoxContainer/CustomizationPanel/VBoxContainer/ColorGrid"]
layout_mode = 2
text = "Secondary:"

[node name="SecondaryColorPicker" type="ColorPickerButton" parent="MarginContainer/VBoxContainer/CustomizationPanel/VBoxContainer/ColorGrid"]
layout_mode = 2

[node name="AccentColorLabel" type="Label" parent="MarginContainer/VBoxContainer/CustomizationPanel/VBoxContainer/ColorGrid"]
layout_mode = 2
text = "Accent:"

[node name="AccentColorPicker" type="ColorPickerButton" parent="MarginContainer/VBoxContainer/CustomizationPanel/VBoxContainer/ColorGrid"]
layout_mode = 2

[node name="RandomizeButton" type="Button" parent="MarginContainer/VBoxContainer/CustomizationPanel/VBoxContainer"]
layout_mode = 2
text = "Randomize Colors"

[node name="ActionButtons" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/ActionButtons"]
layout_mode = 2
text = "Back to Selection"

[node name="ConfirmButton" type="Button" parent="MarginContainer/VBoxContainer/ActionButtons"]
layout_mode = 2
text = "Start Racing"

[node name="HoverSoundPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_5id6k")

[node name="ClickSoundPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ygs3q")
volume_db = -10.0

[node name="StaticBody3D" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.17547, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D"]
transform = Transform3D(5.99629, 0, 0, 0, 5.99629, 0, 0, 0, 5.99629, 0, -1.95602, 0)
mesh = SubResource("PlaneMesh_fwqsq")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(11.9436, 0, 0, 0, -0.161172, 0, 0, 0, 11.9436, 0, -1.95602, 0)
shape = SubResource("BoxShape3D_5id6k")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 6.32942, 0)
sky_mode = 1
